# chat

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.superpowers/brainstorm/608-1779548561/content/: layout.html
.superpowers/brainstorm/scripts/: frame-template.html  start-server.sh
docs/: DEV_MANUAL.html
include/: public.hpp
include/qtclient/: chatclient.hpp  chatwidget.hpp  contactsmanagewidget.hpp  contactwidget.hpp  creategroupwidget.hpp  infowidget.hpp  loginwidget.hpp  mainwidget.hpp  messagebubble.hpp  sidebarwidget.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
src/: CMakeLists.txt
src/chat/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  main.cpp
src/qtclient/: CMakeLists.txt  chatclient.cpp  chatwidget.cpp  chatwidget.ui  contactsmanage.ui  contactsmanagewidget.cpp  contactwidget.cpp  contactwidget.ui  contactwidget.ui.autosave  creategroupwidget.cpp  creategroupwidget.ui  infowidget.cpp  infowidget.ui  loginwidget.cpp  loginwidget.ui  loginwidget.ui.autosave  main.cpp  mainwidget.cpp  messagebubble.cpp  messagebubble.ui  sidebar.ui  sidebarwidget.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
